static/css/style.css
@import url("https://fonts.googleapis.com/css?family=Oswald");

html {
    font-size: clamp(16px, 5vw, 24px);
}

nav {
    font-family: "Oswald", sans-serif;
    font-weight: 300;
    height: 100vh;
}

body {
    background-color: #363d4a;
    display: grid;
    grid-template-columns: 50px 1fr;
    padding-left: 0.5rem;
    overflow-y: hidden;
    height: 100vh;
    /*font-size: 18px;*/
}

main {
    overflow-y: scroll;
    width: 100%;
    position: relative;
    scroll-snap-type: y mandatory; /* vertical snap */
    overflow-y: scroll;
    display: flex;
    flex-direction: column;
    align-items: center;
}

section {
    scroll-snap-align: start;
    max-width: 800px;
    width: 100%;
    min-height: 100vh;
    padding-top: 2rem;
    height: auto;
    flex-shrink: 0;
}

h1 {
    color: rgb(94, 23, 235);
}

body::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 150px;
    pointer-events: none;
    background: linear-gradient(
        to bottom,
        rgba(0, 0, 0, 0),
        rgba(94, 23, 235, 0.1)
    );
}

nav {
    display: grid;
    flex-direction: column;
    row-gap: 10px;
    align-content: center;
    align-items: center;
    justify-items: center;
}

.dot {
    height: 5px;
    width: 5px;
    background-color: white;
    border-radius: 50%;
    margin: auto;
}

nav > a {
    width: 1rem;
    height: 1rem;
    margin-top: 3px;
    margin-bottom: 3px;
    fill: white;
    transition:
        scale 300ms ease,
        fill 300ms ease;
}

nav > a > svg {
    display: flex;
    justify-content: center;
    align-items: center;
}

nav > a.active {
    scale: 1.8;
    fill: rgb(94, 23, 235);
}

h1 > b {
    color: rgb(94, 23, 235);
}

.btn-primary {
    --bs-btn-color: var(--bs-white) !important;
    --bs-btn-bg: rgb(94, 23, 235) !important;
    --bs-btn-border-color: rgb(94, 23, 235) !important  ;
    --bs-btn-hover-color: var(--bs-white) !important;
    --bs-btn-hover-bg: #5515d4 !important;
    --bs-btn-hover-border-color: #5515d4 !important;
    --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb) !important;
    --bs-btn-active-color: var(--bs-btn-hover-color) !important;
    --bs-btn-active-bg: #4b12bc !important;
    --bs-btn-active-border-color: #4b12bc !important;

    display: block !important;
    margin-top: 5px !important;
    margin-bottom: 50px !important;
    align-self: center;
    margin: auto;

    width: 100%;
    max-width: 400px;
    height: 3rem;
}

.committee_image {
    border-radius: 50%;
}

.card {
    background-color: #1d2124 !important ;
    /*border: none !important;*/
    border-radius: 16px;
}

.card-text {
    font-size: 16px !important;
}

